<resources>
    <string name="app_name">Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_recipe">Title Recipe</string>
    <string name="summary">Summary</string>
    <string name="_30_min">30 min</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="recipes_fragment">RecipesFragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="switch_action_bar">Switch ActionBar</string>
    <string name="internet_connected">Internet connected</string>
    <string name="there_is_no_internet_connection_check_connection">There is no internet connection. Check the connection.</string>
</resources>